--- a/UdemyPartyRockApp/Base.lproj/Main.storyboard
+++ b/UdemyPartyRockApp/Base.lproj/Main.storyboard
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11198.2" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="UdemyPartyRockApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +18,133 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="partybanner" translatesAutoresizingMaskIntoConstraints="NO" id="dPQ-QG-cAn">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="174" id="SON-aG-mNL"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SlD-N3-dnj">
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Pm3-PX-Ugk">
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PyA-js-RSH">
+                                                <state key="normal" title="Top Videos"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LmK-Dy-FH6">
+                                                <state key="normal" title="Top Songs">
+                                                    <color key="titleColor" red="0.2359775641025641" green="0.2359775641025641" blue="0.2359775641025641" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wWX-IL-eS3">
+                                                <state key="normal" title="Events">
+                                                    <color key="titleColor" red="0.23597756410000001" green="0.23597756410000001" blue="0.23597756410000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.79397035256410253" green="0.79397035256410253" blue="0.79397035256410253" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="37" id="P2F-z5-kAc"/>
+                                    <constraint firstItem="Pm3-PX-Ugk" firstAttribute="leading" secondItem="SlD-N3-dnj" secondAttribute="leading" constant="8" id="SiO-1V-gQi"/>
+                                    <constraint firstAttribute="trailing" secondItem="Pm3-PX-Ugk" secondAttribute="trailing" constant="8" id="VOD-KJ-adf"/>
+                                    <constraint firstItem="Pm3-PX-Ugk" firstAttribute="top" secondItem="SlD-N3-dnj" secondAttribute="top" constant="3" id="sUe-RJ-Bny"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="85" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5gD-9u-c1J">
+                                <frame key="frameInset" minY="239" width="375" height="436"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="85" id="VEL-Ej-iw4">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="85"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VEL-Ej-iw4" id="LA8-FJ-xgN">
+                                            <frame key="frameInset" width="375" height="84"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="partybanner" translatesAutoresizingMaskIntoConstraints="NO" id="c8q-87-xED">
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="68" id="QIy-vk-PnI"/>
+                                                        <constraint firstAttribute="height" constant="68" id="xec-Fd-8ep"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tom Sawyer" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vi1-6i-lzO">
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="68" id="zRT-fy-8Vy"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="c8q-87-xED" firstAttribute="leading" secondItem="LA8-FJ-xgN" secondAttribute="leadingMargin" id="4Cp-97-1aX"/>
+                                                <constraint firstItem="c8q-87-xED" firstAttribute="centerY" secondItem="LA8-FJ-xgN" secondAttribute="centerY" id="FnW-6i-Yls"/>
+                                                <constraint firstItem="Vi1-6i-lzO" firstAttribute="leading" secondItem="c8q-87-xED" secondAttribute="trailing" constant="8" id="G60-QD-UkV"/>
+                                                <constraint firstItem="Vi1-6i-lzO" firstAttribute="trailing" secondItem="LA8-FJ-xgN" secondAttribute="trailingMargin" id="KAZ-M5-Eg9"/>
+                                                <constraint firstItem="Vi1-6i-lzO" firstAttribute="centerY" secondItem="LA8-FJ-xgN" secondAttribute="centerY" id="hMo-aa-62e"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="5gD-9u-c1J" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4HM-b5-qON"/>
+                            <constraint firstItem="SlD-N3-dnj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4R5-QR-w7l"/>
+                            <constraint firstItem="dPQ-QG-cAn" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Dha-fN-k8Q"/>
+                            <constraint firstItem="SlD-N3-dnj" firstAttribute="top" secondItem="dPQ-QG-cAn" secondAttribute="bottom" id="F1Y-6D-yYd"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="5gD-9u-c1J" secondAttribute="bottom" id="I6g-wm-pkv"/>
+                            <constraint firstAttribute="trailing" secondItem="SlD-N3-dnj" secondAttribute="trailing" id="TwR-xp-HpJ"/>
+                            <constraint firstAttribute="trailing" secondItem="dPQ-QG-cAn" secondAttribute="trailing" id="YVb-3P-dL8"/>
+                            <constraint firstItem="5gD-9u-c1J" firstAttribute="top" secondItem="SlD-N3-dnj" secondAttribute="bottom" id="ZZH-n5-hNq"/>
+                            <constraint firstItem="dPQ-QG-cAn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="nuw-5E-0my"/>
+                            <constraint firstAttribute="trailing" secondItem="5gD-9u-c1J" secondAttribute="trailing" id="wgt-Q2-snC"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <segue destination="PuV-ad-fYP" kind="showDetail" identifier="VideoViewController" id="uSz-nt-wvf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="38.23088455772114"/>
+        </scene>
+        <!--Video View Controller-->
+        <scene sceneID="3Kb-aQ-MJZ">
+            <objects>
+                <viewController id="PuV-ad-fYP" customClass="VideoViewController" customModule="UdemyPartyRockApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="l5M-7K-CZn"/>
+                        <viewControllerLayoutGuide type="bottom" id="Cje-8i-lOq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4sD-yj-zGg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Lj-I5-PJA">
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="234" id="I5w-pF-ukq"/>
+                                </constraints>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.79397035260000004" green="0.79397035260000004" blue="0.79397035260000004" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="7Lj-I5-PJA" firstAttribute="trailing" secondItem="4sD-yj-zGg" secondAttribute="trailingMargin" id="EVJ-Bk-y9c"/>
+                            <constraint firstItem="7Lj-I5-PJA" firstAttribute="top" secondItem="l5M-7K-CZn" secondAttribute="bottom" id="SrH-Ig-h3W"/>
+                            <constraint firstItem="7Lj-I5-PJA" firstAttribute="leading" secondItem="4sD-yj-zGg" secondAttribute="leadingMargin" id="scw-mX-wsR"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vck-tf-CLs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="700" y="37.331334332833585"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="partybanner" width="610" height="297"/>
+    </resources>
 </document>
